# StrataFuse

./: README.md  index.html  package-lock.json  package.json  update.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: lifecycle.rs  logs.rs  mod.rs  profiles.rs  stats.rs
src-tauri/src/logging/: rotation.rs
src-tauri/src/rclone/: config.rs  daemon.rs  mod.rs  profiles.rs  rc_client.rs
src/components/: ProfileSelector.tsx
src/components/dashboard/: CachePanel.tsx  Dashboard.tsx  LogViewer.tsx  StatCard.tsx  TransferTable.tsx
src/components/ui/: GlassCard.tsx  StepIndicator.tsx  TextInput.tsx  ToastContainer.tsx  ToggleSwitch.tsx
src/components/wizard/: AuthStep.tsx  ProviderStep.tsx  ScopeStep.tsx  SetupWizard.tsx  TuningStep.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useLogs.ts  useProfiles.ts  useStats.ts
src/lib/: format.ts  types.ts
