[package]
name = "stratafuse"
version = "0.2.0"
description = "A premium cloud-mounting desktop app wrapping rclone"
authors = ["StrataFuse"]
edition = "2021"

[lib]
name = "stratafuse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — rclone process management + log capture
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time", "fs", "macros"] }

# HTTP client for rclone RC API
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding for RC Basic Auth
base64 = "0.22"

# Timestamps for log entries and profiles
chrono = { version = "0.4", features = ["serde"] }

# Efficient synchronization for shared state
parking_lot = "0.12"

# Internal application logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# UUID generation for profile IDs
uuid = { version = "1", features = ["v4", "serde"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
